<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccentDark"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/hero_detail_toolbar_image_height"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarHeroDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/ivToolbarHeroDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/toolbar_image"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:transitionName="@string/hero_picture"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/splash"
                tools:ignore="UnusedAttribute"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarHeroDetail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/half_standard_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_standard_margin"
                android:background="@color/colorAccent"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="@dimen/half_standard_margin"
                card_view:cardBackgroundColor="@color/colorAccent"
                card_view:cardCornerRadius="@dimen/cardview_default_radius"
                card_view:cardElevation="@dimen/cardview_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvHeroDetailName"
                        android:layout_width="match_parent"
                        android:textColor="@android:color/black"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        tools:text="Name"/>

                    <TextView
                        android:id="@+id/tvHeroDetailRealName"
                        android:layout_width="match_parent"
                        android:textColor="@android:color/black"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/half_standard_margin"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        tools:text="Real name"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_standard_margin"
                android:background="@color/colorAccent"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="@dimen/half_standard_margin"
                card_view:cardBackgroundColor="@color/colorAccent"
                card_view:cardCornerRadius="@dimen/cardview_default_radius"
                card_view:cardElevation="@dimen/cardview_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@android:color/black"
                        android:text="@string/powers"/>

                    <TextView
                        android:id="@+id/tvHeroDetailPowers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="@dimen/half_standard_margin"
                        tools:text="Strenght, elasticity, bulletproof skin"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/standard_margin"
                        android:textColor="@android:color/black"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:text="@string/abilities"/>

                    <TextView
                        android:id="@+id/tvHeroDetailAbilities"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="@dimen/half_standard_margin"
                        tools:text="Strenght, elasticity, bulletproof skin"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="@dimen/standard_margin"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:text="@string/groups"/>

                    <TextView
                        android:id="@+id/tvHeroDetailGroups"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="@dimen/half_standard_margin"
                        tools:text="Avengers, Fantastic four"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="@dimen/standard_margin"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:text="@string/height"/>

                    <TextView
                        android:id="@+id/tvHeroDetailHeight"
                        android:layout_width="match_parent"
                        android:textColor="@android:color/black"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/half_standard_margin"
                        tools:text="1.70m"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>